--- a/templates/bootstrap/index.html
+++ b/templates/bootstrap/index.html
@@ -16,6 +16,9 @@
   border-radius: 5px;
   flex: 1;
 }
+.generated-on-time{
+  margin-right: 10px;
+}
 .card h4{
   font-size: 15px;
 }
@@ -55,8 +58,9 @@
           <a class="navbar-brand"><%= brandTitle %></a>
           <div class="project-name visible-md visible-lg"><%= suite.name.plain %></div>
           <div class="label-container">
-            <span class="label label-success" onclick="toggle('.feature-passed')" title=<%= suite.reportAs %>>Passed: <%= suite.passed %></span>
-            <span class="label label-danger" onclick="toggle('.feature-failed')" title=<%= suite.reportAs %>>Failed: <%= suite.failed %></span>
+                <div class="generated-on-time">
+                  <%= suite.time %>
+                </div>
           </div>
         </div>
       </div>
@@ -64,7 +68,6 @@
 
     <div class="container">
 
-      <div class="generated-on"><%= suite.time %></div>
       <div class="count-wrapper mb-20px">
         <div class="card blue-box">
           <div class="feature-title">
