pie chart changes

--- a/templates/bootstrap/index.html
+++ b/templates/bootstrap/index.html
@@ -31,6 +31,9 @@
 .yellow-box{
   background: #f0ad4e;
 }
+.lt-yellow-box{
+  background: #f1e87e;
+}
 .green-box{
   background: #5cb85b;
 }
@@ -100,7 +103,7 @@
           </div>
         </div>
         <% if (suite.scenarios.rerun) { %>
-          <div class="card yellow-box">
+          <div class="card lt-yellow-box">
             <div class="feature-title">
               <h4>Re-run Scenarios</h2>
             </div>
