fix generated at time format

--- a/templates/bootstrap/index.html
+++ b/templates/bootstrap/index.html
@@ -16,7 +16,7 @@
   border-radius: 5px;
   flex: 1;
 }
-.generated-on-time{
+.generated-on{
   margin-right: 10px;
 }
 .card h4{
@@ -61,7 +61,7 @@
           <a class="navbar-brand"><%= brandTitle %></a>
           <div class="project-name visible-md visible-lg"><%= suite.name.plain %></div>
           <div class="label-container">
-                <div class="generated-on-time">
+                <div class="generated-on">
                   <%= suite.time %>
                 </div>
           </div>
