colour change rerun

--- a/templates/bootstrap/index.html
+++ b/templates/bootstrap/index.html
@@ -31,8 +31,8 @@
 .yellow-box{
   background: #f0ad4e;
 }
-.lt-yellow-box{
-  background: #f1e87e;
+.saffron-box{
+  background: #ff9933;
 }
 .green-box{
   background: #5cb85b;
@@ -103,7 +103,7 @@
           </div>
         </div>
         <% if (suite.scenarios.rerun) { %>
-          <div class="card lt-yellow-box">
+          <div class="card saffron-box">
             <div class="feature-title">
               <h4>Re-run Scenarios</h2>
             </div>
