Cucumber report | Passed state tooltip is flickering for scenario pie chart

--- a/templates/bootstrap/index.html
+++ b/templates/bootstrap/index.html
@@ -5,6 +5,10 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" >
     <style type="text/css">
       <%= styles %>
+
+/** Issue in google-charts tooltip - https://github.com/google/google-visualization-issues/issues/2162 */
+.google-visualization-tooltip { pointer-events:none; }
+      
 .count-wrapper{
   display: flex;
   gap: 15px;
