--- a/templates/bootstrap/index.html
+++ b/templates/bootstrap/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Cucumber Feature Report</title>
+    <link rel="icon" href="https://www.lambdatest.com/favicon.ico" >
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" >
     <style type="text/css">
       <%= styles %>
@@ -179,7 +180,7 @@
 
       <% if (suite.metadata) { %>
       <div class="panel panel-default">
-        <div class="panel-heading">
+        <div class="panel-heading open">
           <h4 class="panel-title">
             <a data-toggle="collapse" href="#logOutput">
               <i class="glyphicon glyphicon-chevron-right"></i>
@@ -188,7 +189,7 @@
             </a>
           </h4>
         </div>
-        <div id="logOutput" class="panel-collapse collapse">
+        <div id="logOutput" class="panel-collapse collapse in">
           <div class="panel-body">
             <div class="row">
               <% var isLeft = true %>
