--- a/templates/_common/bootstrap.hierarchy/features.html
+++ b/templates/_common/bootstrap.hierarchy/features.html
@@ -99,30 +99,30 @@
                                     <% if(!step.hidden || step.image || step.text || (step.result && step.result.status === 'failed')) { %>
                                     <p class="scenario-container">
                                     <div class="row steps">
-                                      <a data-toggle="collapse" href="#collapse-steps-<%= stepIndex %><%= suite.name.sanitized %><%= scenarioId %>" role="button" aria-expanded="false" aria-controls="collapse-steps-<%= stepIndex %><%= suite.name.sanitized %><%= scenarioId %>">
-                                            <% if(step.result) { %>
-                                                <% if(step.result.status === 'passed') { %>
+                                        <% if(step.result) { %>
+                                            <% if(step.result.status === 'passed') { %>
                                                 <span class="label label-success" title="Success"><i
-                                                        class="glyphicon glyphicon-ok"></i></span>
-                                                <% } else if(step.result.status === 'failed') { %>
-                                                <span class="label label-danger" title="Failed"><i
-                                                        class="glyphicon glyphicon-remove"></i></span>
-                                                <% } else if(step.result.status === 'skipped') { %>
-                                                <span class="label label-warning" title="Skipped"><i
-                                                        class="glyphicon glyphicon-minus"></i></span>
-                                                <% } else if(step.result.status === 'ambiguous') { %>
-                                                <span class="label label-primary" title="Ambiguous"><i
-                                                        class="glyphicon glyphicon-question-sign"></i></span>
-                                                <% } else if(step.result.status === 'pending') { %>
-                                                <span class="label label-default" title="Pending"><i
-                                                        class="glyphicon glyphicon-exclamation-sign"></i></span>
-                                                <% } else { %>
-                                                <span class="label label-info" title="Undefined"><i
-                                                        class="glyphicon glyphicon-flash"></i></span>
-                                                <% } %>
-                                                <% } %>
+                                                    class="glyphicon glyphicon-ok"></i></span>
+                                                    <% } else if(step.result.status === 'failed') { %>
+                                                        <span class="label label-danger" title="Failed"><i
+                                                            class="glyphicon glyphicon-remove"></i></span>
+                                                            <% } else if(step.result.status === 'skipped') { %>
+                                                                <span class="label label-warning" title="Skipped"><i
+                                                                    class="glyphicon glyphicon-minus"></i></span>
+                                                                    <% } else if(step.result.status === 'ambiguous') { %>
+                                                                        <span class="label label-primary" title="Ambiguous"><i
+                                                                            class="glyphicon glyphicon-question-sign"></i></span>
+                                                                            <% } else if(step.result.status === 'pending') { %>
+                                                                                <span class="label label-default" title="Pending"><i
+                                                                                    class="glyphicon glyphicon-exclamation-sign"></i></span>
+                                                                                    <% } else { %>
+                                                                                        <span class="label label-info" title="Undefined"><i
+                                                                                            class="glyphicon glyphicon-flash"></i></span>
+                                                                                            <% } %>
+                                                                                            <% } %>
+                                <a data-toggle="collapse" href="#collapse-steps-<%= stepIndex %><%= suite.name.sanitized %><%= scenarioId %>" role="button" aria-expanded="false" aria-controls="collapse-steps-<%= stepIndex %><%= suite.name.sanitized %><%= scenarioId %>">
                                                 <span class="text">
-                                    <span class="keyword highlight"><%= step.keyword %></span>
+                                    <span><%= step.keyword %></span>
                                       <span> <%- step.name %></span>
                                         <% if (step.doc_string && step.doc_string.value) { %>
                                           <span>
@@ -134,6 +134,7 @@
                                            <%= calculateDuration(step.result.duration) %>
                                           </span>
                                         <% } %>
+                                           </a>
                                      <% if(step.arguments) { %>
                                         <% for( var i = 0; i < step.arguments.length; i++ ) { %>
                                            <% if(step.arguments[i]["rows"]) { %>
@@ -198,22 +199,6 @@
                                      
                                   </span>
                                             <% if(step.result) { %>
-                                                <% var count = 0 %>
-                                                <% if(step.result.error_message) { %>
-                                                <% count++ %>
-                                                <% } %>
-                                                <% if(step.text) { %>
-                                                <% count++ %>
-                                                <% } %>
-                                                <% if(step.image) { %>
-                                                <% count++ %>
-                                                <% } %>
-    
-                                                <span class="label-container">
-                                                    <span class="label label-success">
-                                                        <%= count %>
-                                                    </span>
-                                                </span>
                                             <% if(step.result.status === 'undefined') { %>
                                             <pre class=info>
             <br>Then(/^<%= step.name.replace(/"[^"]*"/g, '"\(\[\^\"\]\*\)"') %>$/, function(<% for (var i=1; i<(step.name.split('"').length / 2); i++) { %>arg<%= i %>, <% } %>callback) {
@@ -224,11 +209,13 @@
     
                                                 <% } %>
                                             
-                                      </a>
+                                   
                                       <div class="collapse panel-body" id="collapse-steps-<%= stepIndex %><%= suite.name.sanitized %><%= scenarioId %>">
                                             <% if (step.result.error_message) { %>
-                                                <a href="#error<%= featureIndex %>_<%= scenarioIndex %><%= stepIndex %>"
-                                                   data-toggle="collapse" class="toggle">Show Error +</a>
+                                                 <div>
+                                                   <a href="#error<%= featureIndex %>_<%= scenarioIndex %><%= stepIndex %>"
+                                                     data-toggle="collapse" class="toggle">Show Error +</a>
+                                                  </div>
                                                 <div id="error<%= featureIndex %>_<%= scenarioIndex %><%= stepIndex %>"
                                                      class="collapse">
                                                     <pre class="info show-modal"
@@ -269,8 +256,10 @@
                                                 <% } %>
             
                                                 <% if (step.text) { %>
-                                                <a href="#info<%= featureIndex %>_<%= scenarioIndex %><%= stepIndex %>"
+                                                  <div>
+                                                    <a href="#info<%= featureIndex %>_<%= scenarioIndex %><%= stepIndex %>"
                                                    data-toggle="collapse" class="show-info toggle">Show Info +</a>
+                                                </div>
                                                 <div id="info<%= featureIndex %>_<%= scenarioIndex %><%= stepIndex %>"
                                                      class="collapse"
                                                      data-toggle="modal"
@@ -310,8 +299,10 @@
                                             <% } %>
             
                                                 <% if (step.image) { %>
-                                            <a href="#ss<%= featureIndex %>_<%= scenarioIndex %><%= stepIndex %>"
-                                                data-toggle="collapse" class="toggle">Screenshot +</a>
+                                            <div>
+                                               <a href="#ss<%= featureIndex %>_<%= scenarioIndex %><%= stepIndex %>"
+                                                data-toggle="collapse" class="toggle d-block">Screenshot +</a>
+                                            </div>
                                             <div id="ss<%= featureIndex %>_<%= scenarioIndex %><%= stepIndex %>"
                                                 class="screenshot collapse">
                                                 <pre class="info show-modal"
