--- a/templates/bootstrap/index.html
+++ b/templates/bootstrap/index.html
@@ -111,7 +111,7 @@
         <% if (suite.features.summary.skipped) { %>
           <div class="card yellow-box">
             <div class="feature-title">
-              <h4>Skipped Skipped</h2>
+              <h4>Skipped Features</h2>
             </div>
             <div class="feature-value">
               <h5>
