--- a/templates/bootstrap/index.html
+++ b/templates/bootstrap/index.html
@@ -83,7 +83,7 @@
                                                             "pending" : <%= suite.features.summary.pending %>,
                                                             "skipped" : <%= suite.features.summary.skipped %>,
                                                             "ambiguous" : <%= suite.features.summary.ambiguous %>
-                                                             "newTotoal" : <%= suite.features.summary.getTotal() %>
+                                                             "newTotal" : <%= suite.features.summary.getTotal() %>
                                                               "prevTotal" : <%= suite.features.summary.featureTotal %>
            <h2>Scenarios</h2>
       
